# Dictionary

./: .gitignore  CMakeLists.txt  embed_resource.cmake  main.cpp
include/: Dictionary.hpp  general.hpp
j2me/: README.txt
j2me/src/: Dictionary.java
python/: Tureng.py  separate_files.py
src/: Dictionary.cpp  get_dictionary.cpp
